--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" [routingLink]="['/']"><img src="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/128/kerbal-space-program-icon.png" width="50" height="50">Navbar</a>
+  <a class="navbar-brand" [routerLink]="['/']"><img src="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/128/kerbal-space-program-icon.png" width="50" height="50">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,10 +8,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" [routingLink]="['/']">Home</a>
+        <a class="nav-link" [routerLink]="['/']" >Home</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" [routingLink]="['/','about']">About</a>
+        <a class="nav-link" [routerLink]="['/','about']">About</a>
       </li>
     </ul>
   </div>
