--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="d-flex justify-content-center mb-5">
+    <img src="https://via.placeholder.com/640x80">
+</div>
+
+<div class="jumbotron">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
+      content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" [routerLink]="['/','posts']" role="button">Go To Posts</a>
+    </p>
+  </div>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab explicabo ipsa iure laboriosam, molestias rem sapiente
+    totam veniam. Architecto culpa excepturi minus pariatur quidem, quisquam sapiente sequi voluptate? Delectus, error.
+  </p>
