--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<p>page-not-found works!</p>
+
+<div class="d-flex justify-content-center align-items-center"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+    <br><br>404</div>
