--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -1,1 +1,23 @@
-<p>posts-list works!</p>
+<div *ngFor="let post of posts">
+    <mat-card class="mb-4">
+        <mat-card-header>
+          <div mat-card-avatar>
+            <img src="https://via.placeholder.com/48x48" alt="">
+          </div>
+          <mat-card-title>{{ post.title }}</mat-card-title>
+          <mat-card-subtitle>{{ post.id }} - {{ post.userId }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <p>
+            {{ post.body }}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+</div>
+
+
+<!-- selector nie działał -> app-post-item -->
